--- a/templates/index.html
+++ b/templates/index.html
@@ -105,8 +105,7 @@
     
     <div class="top-bar">
         <div class="container">
-            <img src="https://storage.googleapis.com/bkt-static-tt/logo.png" width="60" height="60" class="logo" alt="">
-            TechTrapture User Management
+            Satya's User Management
         </div>
         
     </div>
