--- a/templates/delete.html
+++ b/templates/delete.html
@@ -32,7 +32,7 @@
     }
     </style>
 <div class="navbar">
-    <a href="#home">TechTrapture User Management</a>
+    <a href="#home">Satya's User Management</a>
     <a href="/" class="fetch-data-btn">Add Data</a>
 </div>
 <body>
