--- a/templates/get_data.html
+++ b/templates/get_data.html
@@ -77,7 +77,7 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="#home">Satya's User Management</a>
+        <a href="#home">Satya User Management</a>
         <a href="/" class="fetch-data-btn">Add Data</a>
     </div>
 
