--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,7 @@
     
     <div class="top-bar">
         <div class="container">
-            Satya's User Management
+            Satya User Management
         </div>
         
     </div>
